--- a/package.json
+++ b/package.json
@@ -3,14 +3,23 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@testing-library/dom": "7.28.1",
     "@testing-library/jest-dom": "5.11.4",
     "@testing-library/react": "11.1.0",
     "@testing-library/user-event": "12.1.10",
+    "@wdio/cli": "6.9.1",
+    "@wdio/local-runner": "6.9.1",
+    "@wdio/mocha-framework": "6.8.0",
+    "@wdio/spec-reporter": "6.8.1",
     "axios": "0.21.0",
+    "chromedriver": "87.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-scripts": "4.0.0",
-    "web-vitals": "0.2.4"
+    "typescript": "4.1.2",
+    "wdio-chromedriver-service": "6.0.4",
+    "web-vitals": "0.2.4",
+    "webdriverio": "6.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
