--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@testing-library/jest-dom": "5.11.4",
     "@testing-library/react": "11.1.0",
     "@testing-library/user-event": "12.1.10",
+    "@wdio/allure-reporter": "6.8.1",
     "@wdio/cli": "6.9.1",
     "@wdio/local-runner": "6.9.1",
     "@wdio/mocha-framework": "6.8.0",
     "@wdio/spec-reporter": "6.8.1",
+    "@wdio/sync": "6.9.1",
     "axios": "0.21.0",
     "chromedriver": "87.0.0",
     "react": "17.0.1",
