--- a/package.json
+++ b/package.json
@@ -3,6 +3,14 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "axios": "0.21.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-scripts": "4.0.0",
+    "typescript": "4.1.2",
+    "web-vitals": "0.2.4"
+  },
+  "devDependencies": {
     "@testing-library/dom": "7.28.1",
     "@testing-library/jest-dom": "5.11.4",
     "@testing-library/react": "11.1.0",
@@ -13,14 +21,9 @@
     "@wdio/mocha-framework": "6.8.0",
     "@wdio/spec-reporter": "6.8.1",
     "@wdio/sync": "6.9.1",
-    "axios": "0.21.0",
     "chromedriver": "87.0.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-scripts": "4.0.0",
-    "typescript": "4.1.2",
     "wdio-chromedriver-service": "6.0.4",
-    "web-vitals": "0.2.4",
+    "wdio-intercept-service": "4.1.2",
     "webdriverio": "6.9.1"
   },
   "scripts": {
