--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "web-vitals": "0.2.4"
   },
   "devDependencies": {
+    "@babel/cli": "^7.12.7",
+    "@babel/core": "7.12.7",
+    "@babel/register": "7.12.1",
     "@testing-library/dom": "7.28.1",
     "@testing-library/jest-dom": "5.11.4",
     "@testing-library/react": "11.1.0",
@@ -21,6 +24,7 @@
     "@wdio/mocha-framework": "6.8.0",
     "@wdio/spec-reporter": "6.8.1",
     "@wdio/sync": "6.9.1",
+    "babel-preset-latest-node": "5.1.1",
     "chromedriver": "87.0.0",
     "wdio-chromedriver-service": "6.0.4",
     "wdio-intercept-service": "4.1.2",
