Finished to configure tests, optimized and refactored code, added favicon

--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,3 @@
 {
-  "presets": [
-    [
-      "latest-node",
-      {
-        "target": "current"
-      }
-    ]
-  ]
+  "presets": [["latest-node", { "target": "current" }]]
 }
