--- a/package.json
+++ b/package.json
@@ -11,13 +11,9 @@
     "web-vitals": "0.2.4"
   },
   "devDependencies": {
-    "@babel/cli": "^7.12.7",
+    "@babel/cli": "7.12.7",
     "@babel/core": "7.12.7",
     "@babel/register": "7.12.1",
-    "@testing-library/dom": "7.28.1",
-    "@testing-library/jest-dom": "5.11.4",
-    "@testing-library/react": "11.1.0",
-    "@testing-library/user-event": "12.1.10",
     "@wdio/allure-reporter": "6.8.1",
     "@wdio/cli": "6.9.1",
     "@wdio/local-runner": "6.9.1",
@@ -28,18 +24,18 @@
     "chromedriver": "87.0.0",
     "wdio-chromedriver-service": "6.0.4",
     "wdio-intercept-service": "4.1.2",
+    "wdio-wiremock-service": "6.0.3",
     "webdriverio": "6.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "wdio run ./wdio.conf.js",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
