--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "wdio run ./wdio.conf.js",
+    "testMocks": "wdio run ./wdio-mocks.conf.js",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
